# gold-silver-decision-engine

./: .env.example  .gitignore  README.md  SESSION_STATUS.md  gold_silver_sample_dataset.csv  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  models.py
app/domain/: __init__.py  prices.py
app/repositories/: __init__.py  prices.py
app/routes/: api.py  web.py
app/services/: calculator.py  data_integrity.py  data_management.py  data_repair.py  decision_view.py  history.py  imports.py  pricing.py  ratio.py  ratio_confidence.py  signals.py
app/templates/: admin_data.html  admin_import.html  base.html  calculator.html  index.html
data/decision/: current_recommendation.json  current_signals.csv  current_signals.parquet  decision_report.json  (+3 more)
gold-silver-decision-engine-docs/: README_Codex_Start_Here.md
gold_silver_decision_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
imports/: normalized_gold_silver.csv  xagusd_d.csv  xauusd_d.csv
scripts/: import_prices_csv.py  init_db.py  normalize_stooq_csv.py  quickstart.sh  seed_sample_data.py
src/: __init__.py
tests/: test_backtest.py  test_build_core_features.py  test_calculator.py  test_data_integrity.py  test_data_management.py  test_data_repair.py  test_decision_regression.py  test_decision_view.py  test_explain.py  test_h1.py  test_h2.py  test_h3.py  test_history.py  test_imports.py  test_leaderboard.py  test_load_prices.py  test_prices_repository.py  test_pricing.py  test_ratio.py  test_ratio_confidence.py  test_recommender.py  test_validate_core_features.py  test_web_import.py
(+43 files in other folders)
